--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -1,21 +1,14 @@
 @import "../../../plugins/neat/neat"
 @import "../../variables"
 
-// .blur
-//   filter: blur(3px)
-//   -o-filter: blur(3px)
-//   -ms-filter: blur(3px)
-//   -moz-filter: blur(3px)
-//   -webkit-filter: blur(3px)
-
 .sidebar
   @include grid-column(3)
   background: linear-gradient( #2287C9, $primary-color,  #2287C9)
   color: white
   height: 100vh
   margin-left: 0
-  padding: 2%
-
+  padding: 0 0.8em
+  position: fixed
   filter: blur(3px)
   -o-filter: blur(3px)
   -ms-filter: blur(3px)
@@ -25,6 +18,7 @@
 .logo
   width: 10vw
   margin-bottom: 2vh
+  margin-top: 2vh
 
 .begruessung
   margin-bottom: 3vh
