--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -3,6 +3,7 @@
 
 .srh-tour-game
   @include grid-column(8)
+  @include grid-shift(3)
   padding: 2%
 
 ul
