--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -3,9 +3,8 @@
 
 .srh-tour
   @include grid-column(8.7)
-  margin-left: 0
+  @include grid-shift(3)
   padding: 2%
-  @include grid-container
 
 .srh-segment
   @include grid-column(6)
